--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ let state = MENU;
 const playerImg = new Image(); playerImg.src = "player.png";
 const enemyImg  = new Image(); enemyImg.src  = "enemy.png";
 
+// skin preview images (user should add these files to same folder)
+const skinImg1 = new Image(); skinImg1.src = "skin1.png"; // Epic
+const skinImg2 = new Image(); skinImg2.src = "skin2.png"; // Mythical
+const skinImg3 = new Image(); skinImg3.src = "skin3.png"; // Legendary
+const skinImg4 = new Image(); skinImg4.src = "skin4.png"; // X
+
 // ===== AUDIO =====
 const musicList = [
   new Audio("music1.mp3"),
@@ -123,12 +129,14 @@ const stars = Array.from({ length: 300 }, () => ({
 }));
 
 // ===== SKINS (SHOP) =====
+// id 0 = base / Rare (no preview image)
+// ids 1..4 correspond to skin1..skin4 images added by user
 const skins = [
-  {id:0,name:"Rare",cost:100,color:"blue"},
-  {id:1,name:"Epic",cost:200,color:"purple"},
-  {id:2,name:"Mythical",cost:300,color:"red"},
-  {id:3,name:"Legendary",cost:400,color:"yellow"},
-  {id:4,name:"X",cost:1000,color:"white"}
+  {id:0,name:"Rare",cost:100,color:"blue", preview:null},
+  {id:1,name:"Epic",cost:200,color:"purple", preview:skinImg1},
+  {id:2,name:"Mythical",cost:300,color:"red", preview:skinImg2},
+  {id:3,name:"Legendary",cost:400,color:"yellow", preview:skinImg3},
+  {id:4,name:"X",cost:1000,color:"white", preview:skinImg4}
 ];
 let ownedSkins = JSON.parse(localStorage.getItem("ownedSkins")||"[0]"); // default own skin 0
 let activeSkin = Number(localStorage.getItem("activeSkin")||0);
@@ -173,10 +181,9 @@ canvas.addEventListener("touchstart", e => {
     }
   }
 
-  // MENU: определяем чёткие зоны кнопок (не пересекающиеся)
+  // MENU: defined non-overlapping button zones
   if (state === MENU) {
-    // вычислим высоты кнопок
-    const btnH = canvas.height * 0.08; // площадь кнопки
+    const btnH = canvas.height * 0.08;
     const startCY = canvas.height * 0.48;
     const settingsCY = canvas.height * 0.56;
     const shopCY = canvas.height * 0.64;
@@ -186,7 +193,6 @@ canvas.addEventListener("touchstart", e => {
       return;
     } else if (y > settingsCY - btnH/2 && y < settingsCY + btnH/2) {
       state = SETTINGS;
-      // при входе в настройки ставим паузу музыки (опционально)
       try { musicList[musicIndex].pause(); } catch(e){}
       return;
     } else if (y > shopCY - btnH/2 && y < shopCY + btnH/2) {
@@ -203,7 +209,6 @@ canvas.addEventListener("touchstart", e => {
     else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume = Math.max(0, sfxVolume - 0.1);
     else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume = Math.min(1, sfxVolume + 0.1);
     else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
-      // change music
       musicList.forEach(m => m.pause());
       musicIndex = (musicIndex + 1) % musicList.length;
       try { musicList[musicIndex].play(); } catch(e){}
@@ -216,11 +221,11 @@ canvas.addEventListener("touchstart", e => {
     return;
   }
 
-  // SHOP interactions
+  // SHOP interactions (click card to buy/select)
   if (state === SHOP) {
     skins.forEach((s, i) => {
-      const sy = canvas.height*0.3 + i*45;
-      if (y > sy - 18 && y < sy + 18) {
+      const cardY = canvas.height*0.28 + i*100;
+      if (y > cardY - 50 && y < cardY + 50) {
         if (!ownedSkins.includes(s.id)) {
           if (coins >= s.cost) {
             coins -= s.cost;
@@ -234,8 +239,7 @@ canvas.addEventListener("touchstart", e => {
         }
       }
     });
-    // back
-    if (y > canvas.height*0.85) {
+    if (y > canvas.height*0.92) {
       state = MENU;
       try { musicList[musicIndex].play(); } catch(e){}
     }
@@ -269,7 +273,6 @@ function startGame() {
   player.y = canvas.height - player.h - 20;
   bullets=[]; enemies=[]; score=0; lastShot=0;
   state = GAME;
-  // play game music
   try {
     musicList.forEach(m => m.pause());
     musicList[musicIndex].currentTime = 0;
@@ -286,12 +289,25 @@ function drawStars() {
     ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
   }
 }
-
 function center(t,y,s=24){
   ctx.fillStyle="white";
   ctx.font=`${s}px sans-serif`;
   ctx.textAlign="center";
   ctx.fillText(t,canvas.width/2,y);
+}
+
+// ===== BURST FIRE: раз-два раз-два =====
+function fireBurst() {
+  // first pair
+  bullets.push({ x: player.x + player.w/2 - 12, y: player.y });
+  bullets.push({ x: player.x + player.w/2 + 6, y: player.y });
+  try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
+  // second pair shortly after
+  setTimeout(()=>{
+    bullets.push({ x: player.x + player.w/2 - 12, y: player.y });
+    bullets.push({ x: player.x + player.w/2 + 6, y: player.y });
+    try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
+  }, 140);
 }
 
 // ===== UPDATE (game loop) =====
@@ -321,21 +337,67 @@ function update() {
     return;
   }
 
-  // SHOP
+  // SHOP (render cards with preview image, name and price)
   if (state === SHOP) {
-    center("SHOP",canvas.height*0.18,36);
-    center("COINS: "+coins,canvas.height*0.22,18);
-    skins.forEach((s,i)=>{
-      const y = canvas.height*0.3 + i*45;
-      ctx.fillStyle = s.color;
-      ctx.font = "18px sans-serif";
-      ctx.textAlign = "center";
-      const label = ownedSkins.includes(s.id) ? `${s.name} (OWNED)` : `${s.name} - ${s.cost}`;
-      ctx.fillText(label + (activeSkin===s.id ? "  ✓" : ""), canvas.width/2, y);
-    });
+    center("SHOP",canvas.height*0.12,36);
     ctx.fillStyle="white";
-    center("TAP A SKIN TO BUY/SELECT", canvas.height*0.78, 14);
-    center("BACK",canvas.height*0.92,18);
+    ctx.font="16px sans-serif";
+    ctx.textAlign="center";
+    ctx.fillText("COINS: " + coins, canvas.width/2, canvas.height*0.16);
+
+    skins.forEach((s,i)=>{
+      const y = canvas.height*0.28 + i*100;
+      // card background
+      ctx.fillStyle = "rgba(255,255,255,0.03)";
+      ctx.fillRect(canvas.width*0.06, y-50, canvas.width*0.88, 100);
+
+      // preview image area
+      const imgX = canvas.width*0.08;
+      const imgY = y-40;
+      const imgW = Math.min(120, canvas.width*0.26);
+      const imgH = Math.min(80, 90);
+
+      if (s.preview && s.preview.complete && s.id !== 0) {
+        try {
+          ctx.drawImage(s.preview, imgX, imgY, imgW, imgH);
+        } catch(e){
+          ctx.fillStyle = s.color || "white";
+          ctx.fillRect(imgX, imgY, imgW, imgH);
+        }
+      } else {
+        // placeholder block for base or missing preview
+        ctx.fillStyle = s.color || "white";
+        ctx.fillRect(imgX, imgY, imgW, imgH);
+      }
+
+      // name + price/details on the right
+      ctx.fillStyle = "white";
+      ctx.font = "18px sans-serif";
+      ctx.textAlign = "left";
+      const labelX = imgX + imgW + 18;
+      ctx.fillText(s.name, labelX, y - 6);
+      ctx.font = "14px sans-serif";
+      const priceText = ownedSkins.includes(s.id) ? "OWNED" : s.cost + " coins";
+      ctx.fillText(priceText, labelX, y + 18);
+
+      // small tag with rarity name (visual)
+      ctx.font = "12px sans-serif";
+      ctx.fillStyle = s.color;
+      ctx.fillText(s.id === activeSkin ? "SELECTED" : (ownedSkins.includes(s.id) ? "OWNED" : "BUY"), labelX + 160, y - 6);
+
+      // if selected, draw thin green outline on card
+      if (activeSkin === s.id) {
+        ctx.strokeStyle = "#00ff88";
+        ctx.lineWidth = 2;
+        ctx.strokeRect(canvas.width*0.06 + 2, y-50 + 2, canvas.width*0.88 - 4, 100 - 4);
+      }
+    });
+
+    // back
+    ctx.fillStyle="white";
+    ctx.font="16px sans-serif";
+    ctx.textAlign="center";
+    ctx.fillText("BACK", canvas.width/2, canvas.height*0.92);
     return;
   }
 
@@ -352,10 +414,9 @@ function update() {
     if (touchX!==null) player.x += (touchX - player.x - player.w/2) * 0.15;
     player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
 
-    // shooting (slower)
+    // burst shooting every 650 ms
     if (Date.now() - lastShot > 650) {
-      bullets.push({ x: player.x + player.w/2 - 2, y: player.y });
-      try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
+      fireBurst();
       lastShot = Date.now();
     }
 
@@ -403,9 +464,8 @@ function update() {
       }
     }
 
-    // draw player WITHOUT border (убрал обводку во время игры)
+    // draw player WITHOUT border (no outline during game)
     try { ctx.drawImage(playerImg, player.x, player.y, player.w, player.h); } catch(e){
-      // если нет картинки — просто прямоугольник
       ctx.fillStyle = "white";
       ctx.fillRect(player.x, player.y, player.w, player.h);
     }
