--- a/index.html
+++ b/index.html
@@ -50,17 +50,30 @@ canvas {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
+// iPhone optimization & DPR handling
+const isiOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 function resize() {
   const ratio = 9 / 16;
   const w = window.innerWidth;
   const h = window.innerHeight;
+  let width, height;
   if (w / h > ratio) {
-    canvas.height = h;
-    canvas.width = h * ratio;
+    height = h;
+    width = h * ratio;
   } else {
-    canvas.width = w;
-    canvas.height = w / ratio;
+    width = w;
+    height = w / ratio;
   }
+
+  // set CSS size
+  canvas.style.width = width + "px";
+  canvas.style.height = height + "px";
+
+  // set backing store for crispness on retina while keeping coordinate system logical
+  const dpr = Math.min(window.devicePixelRatio || 1, 2); // cap DPR to 2 for performance
+  canvas.width = Math.round(width * dpr);
+  canvas.height = Math.round(height * dpr);
+  ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
 }
 window.addEventListener("resize", resize);
 resize();
@@ -121,18 +134,18 @@ let enemies = [];
 let score = 0;
 let lastShot = 0;
 
-// ===== STARS =====
-const stars = Array.from({ length: 300 }, () => ({
+// ===== STARS (fewer on iPhone for perf) =====
+const STAR_COUNT = isiOS ? 140 : 300;
+const stars = Array.from({ length: STAR_COUNT }, () => ({
   x: Math.random(),
   y: Math.random(),
   s: Math.random() * 2 + 1
 }));
 
 // ===== SKINS (SHOP) =====
-// id 0 = base / Rare (no preview image)
-// ids 1..4 correspond to skin1..skin4 images added by user
+// id 0 = base / Rare (no preview image) — removed blue color (set color to null)
 const skins = [
-  {id:0,name:"Rare",cost:100,color:"blue", preview:null},
+  {id:0,name:"Rare",cost:100,color:null, preview:null},
   {id:1,name:"Epic",cost:200,color:"purple", preview:skinImg1},
   {id:2,name:"Mythical",cost:300,color:"red", preview:skinImg2},
   {id:3,name:"Legendary",cost:400,color:"yellow", preview:skinImg3},
@@ -141,17 +154,23 @@ const skins = [
 let ownedSkins = JSON.parse(localStorage.getItem("ownedSkins")||"[0]"); // default own skin 0
 let activeSkin = Number(localStorage.getItem("activeSkin")||0);
 
+// ===== HELPER: get current player sprite (apply active skin) =====
+function getActivePlayerImage() {
+  const skin = skins.find(s => s.id === activeSkin);
+  if (skin && skin.preview && skin.preview.complete) return skin.preview;
+  return playerImg;
+}
+
 // ===== AUDIO UNLOCK (для iOS/мобильных) =====
 let audioUnlocked = false;
 function unlockAudioAndMaybePlayMenu() {
   if (audioUnlocked) return;
   audioUnlocked = true;
-  // Прогрев аудио
+  // warm audio
   [...musicList, laserSound, gameOverSound, recordSound].forEach(a=>{
     a.play().then(()=>a.pause()).catch(()=>{});
     a.currentTime = 0;
   });
-  // если в меню, попытаться запустить музыку
   try {
     if (state === MENU) {
       musicList.forEach(m => m.pause());
@@ -174,19 +193,19 @@ canvas.addEventListener("touchstart", e => {
 
   // pause button top-right during GAME (small area)
   if (state === GAME) {
-    if (x > canvas.width - 50 && y < 50) {
+    if (x > canvas.width / (window.devicePixelRatio || 1) - 50 && y < 50) {
       state = PAUSE;
       try { musicList[musicIndex].pause(); } catch(e){}
       return;
     }
   }
 
-  // MENU: defined non-overlapping button zones
+  // MENU
   if (state === MENU) {
-    const btnH = canvas.height * 0.08;
-    const startCY = canvas.height * 0.48;
-    const settingsCY = canvas.height * 0.56;
-    const shopCY = canvas.height * 0.64;
+    const btnH = canvas.height / (window.devicePixelRatio || 1) * 0.08;
+    const startCY = canvas.height / (window.devicePixelRatio || 1) * 0.48;
+    const settingsCY = canvas.height / (window.devicePixelRatio || 1) * 0.56;
+    const shopCY = canvas.height / (window.devicePixelRatio || 1) * 0.64;
 
     if (y > startCY - btnH/2 && y < startCY + btnH/2) {
       startGame();
@@ -224,7 +243,7 @@ canvas.addEventListener("touchstart", e => {
   // SHOP interactions (click card to buy/select)
   if (state === SHOP) {
     skins.forEach((s, i) => {
-      const cardY = canvas.height*0.28 + i*100;
+      const cardY = canvas.height/(window.devicePixelRatio||1)*0.28 + i*100;
       if (y > cardY - 50 && y < cardY + 50) {
         if (!ownedSkins.includes(s.id)) {
           if (coins >= s.cost) {
@@ -233,7 +252,8 @@ canvas.addEventListener("touchstart", e => {
             localStorage.setItem("coins", coins);
             localStorage.setItem("ownedSkins", JSON.stringify(ownedSkins));
           }
-        } else {
+        }
+        if (ownedSkins.includes(s.id)) {
           activeSkin = s.id;
           localStorage.setItem("activeSkin", activeSkin);
         }
@@ -269,8 +289,8 @@ canvas.addEventListener("touchend", ()=>touchX=null);
 
 // ===== START GAME =====
 function startGame() {
-  player.x = canvas.width/2 - player.w/2;
-  player.y = canvas.height - player.h - 20;
+  player.x = canvas.width/(window.devicePixelRatio||1)/2 - player.w/2;
+  player.y = canvas.height/(window.devicePixelRatio||1) - player.h - 20;
   bullets=[]; enemies=[]; score=0; lastShot=0;
   state = GAME;
   try {
@@ -286,87 +306,88 @@ function drawStars() {
   for (let s of stars) {
     s.y += s.s / 600; // slower background
     if (s.y > 1) s.y = 0;
-    ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
+    ctx.fillRect(s.x*canvas.width/(window.devicePixelRatio||1), s.y*canvas.height/(window.devicePixelRatio||1), s.s, s.s);
   }
 }
 function center(t,y,s=24){
   ctx.fillStyle="white";
   ctx.font=`${s}px sans-serif`;
   ctx.textAlign="center";
-  ctx.fillText(t,canvas.width/2,y);
+  ctx.fillText(t,canvas.width/(window.devicePixelRatio||1)/2,y);
 }
 
-// ===== BURST FIRE: раз-два раз-два =====
+// ===== BURST FIRE: one then second (centered) =====
 function fireBurst() {
-  // first pair
-  bullets.push({ x: player.x + player.w/2 - 12, y: player.y });
-  bullets.push({ x: player.x + player.w/2 + 6, y: player.y });
+  // first bullet (center)
+  bullets.push({ x: player.x + player.w/2 - 2, y: player.y });
   try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
-  // second pair shortly after
+  // second bullet shortly after (same center)
   setTimeout(()=>{
-    bullets.push({ x: player.x + player.w/2 - 12, y: player.y });
-    bullets.push({ x: player.x + player.w/2 + 6, y: player.y });
+    bullets.push({ x: player.x + player.w/2 - 2, y: player.y });
     try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
-  }, 140);
+  }, 120);
 }
 
 // ===== UPDATE (game loop) =====
 function update() {
+  // clear using logical size
+  const lw = canvas.width/(window.devicePixelRatio||1);
+  const lh = canvas.height/(window.devicePixelRatio||1);
   ctx.clearRect(0,0,canvas.width,canvas.height);
   drawStars();
 
   // MENU
   if (state === MENU) {
-    center("SPACE SHOOTER",canvas.height*0.32,40);
-    center("START",canvas.height*0.48);
-    center("SETTINGS",canvas.height*0.56);
-    center("SHOP",canvas.height*0.64);
-    center("COINS: "+coins,canvas.height*0.72,18);
+    center("SPACE SHOOTER",lh*0.32,40);
+    center("START",lh*0.48);
+    center("SETTINGS",lh*0.56);
+    center("SHOP",lh*0.64);
+    center("COINS: "+coins,lh*0.72,18);
     return;
   }
 
   // SETTINGS
   if (state === SETTINGS) {
-    center("SETTINGS",canvas.height*0.25,36);
-    center("Music -",canvas.height*0.38);
-    center("Music +",canvas.height*0.45);
-    center("SFX -",canvas.height*0.52);
-    center("SFX +",canvas.height*0.59);
-    center("Change Music",canvas.height*0.66);
-    center("BACK",canvas.height*0.82);
+    center("SETTINGS",lh*0.25,36);
+    center("Music -",lh*0.38);
+    center("Music +",lh*0.45);
+    center("SFX -",lh*0.52);
+    center("SFX +",lh*0.59);
+    center("Change Music",lh*0.66);
+    center("BACK",lh*0.82);
     return;
   }
 
   // SHOP (render cards with preview image, name and price)
   if (state === SHOP) {
-    center("SHOP",canvas.height*0.12,36);
+    center("SHOP",lh*0.12,36);
     ctx.fillStyle="white";
     ctx.font="16px sans-serif";
     ctx.textAlign="center";
-    ctx.fillText("COINS: " + coins, canvas.width/2, canvas.height*0.16);
+    ctx.fillText("COINS: " + coins, lw/2, lh*0.16);
 
     skins.forEach((s,i)=>{
-      const y = canvas.height*0.28 + i*100;
+      const y = lh*0.28 + i*100;
       // card background
       ctx.fillStyle = "rgba(255,255,255,0.03)";
-      ctx.fillRect(canvas.width*0.06, y-50, canvas.width*0.88, 100);
+      ctx.fillRect(lw*0.06, y-50, lw*0.88, 100);
 
       // preview image area
-      const imgX = canvas.width*0.08;
+      const imgX = lw*0.08;
       const imgY = y-40;
-      const imgW = Math.min(120, canvas.width*0.26);
+      const imgW = Math.min(120, lw*0.26);
       const imgH = Math.min(80, 90);
 
       if (s.preview && s.preview.complete && s.id !== 0) {
         try {
           ctx.drawImage(s.preview, imgX, imgY, imgW, imgH);
         } catch(e){
-          ctx.fillStyle = s.color || "white";
+          ctx.fillStyle = s.color || "#aaa";
           ctx.fillRect(imgX, imgY, imgW, imgH);
         }
       } else {
-        // placeholder block for base or missing preview
-        ctx.fillStyle = s.color || "white";
+        // placeholder block for base or missing preview (no blue for Rare)
+        ctx.fillStyle = s.color || "#777";
         ctx.fillRect(imgX, imgY, imgW, imgH);
       }
 
@@ -382,14 +403,14 @@ function update() {
 
       // small tag with rarity name (visual)
       ctx.font = "12px sans-serif";
-      ctx.fillStyle = s.color;
+      ctx.fillStyle = s.color || "#aaa";
       ctx.fillText(s.id === activeSkin ? "SELECTED" : (ownedSkins.includes(s.id) ? "OWNED" : "BUY"), labelX + 160, y - 6);
 
       // if selected, draw thin green outline on card
       if (activeSkin === s.id) {
         ctx.strokeStyle = "#00ff88";
         ctx.lineWidth = 2;
-        ctx.strokeRect(canvas.width*0.06 + 2, y-50 + 2, canvas.width*0.88 - 4, 100 - 4);
+        ctx.strokeRect(lw*0.06 + 2, y-50 + 2, lw*0.88 - 4, 100 - 4);
       }
     });
 
@@ -397,22 +418,22 @@ function update() {
     ctx.fillStyle="white";
     ctx.font="16px sans-serif";
     ctx.textAlign="center";
-    ctx.fillText("BACK", canvas.width/2, canvas.height*0.92);
+    ctx.fillText("BACK", lw/2, lh*0.92);
     return;
   }
 
   // PAUSE
   if (state === PAUSE) {
-    center("PAUSED",canvas.height*0.45,40);
-    center("TAP TO RESUME",canvas.height*0.55,18);
+    center("PAUSED",lh*0.45,40);
+    center("TAP TO RESUME",lh*0.55,18);
     return;
   }
 
   // GAME
   if (state === GAME) {
-    // move player toward touchX
+    // move player toward touchX (touchX is in CSS pixels)
     if (touchX!==null) player.x += (touchX - player.x - player.w/2) * 0.15;
-    player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
+    player.x = Math.max(0, Math.min(lw - player.w, player.x));
 
     // burst shooting every 650 ms
     if (Date.now() - lastShot > 650) {
@@ -420,12 +441,12 @@ function update() {
       lastShot = Date.now();
     }
 
-    // bullets move
+    // bullets move (logical coordinates)
     bullets.forEach(b => b.y -= 8);
     bullets = bullets.filter(b => b.y > -20);
 
     // spawn enemies
-    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
+    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (lw - 48), y: -50 });
     enemies.forEach(e => e.y += 3);
 
     // collisions & logic
@@ -433,7 +454,7 @@ function update() {
       const e = enemies[i];
 
       // lose if enemy reached bottom
-      if (e.y > canvas.height) {
+      if (e.y > lh) {
         endGame();
         return;
       }
@@ -464,8 +485,9 @@ function update() {
       }
     }
 
-    // draw player WITHOUT border (no outline during game)
-    try { ctx.drawImage(playerImg, player.x, player.y, player.w, player.h); } catch(e){
+    // draw player WITH active skin
+    const playerSprite = getActivePlayerImage();
+    try { ctx.drawImage(playerSprite, player.x, player.y, player.w, player.h); } catch(e){
       ctx.fillStyle = "white";
       ctx.fillRect(player.x, player.y, player.w, player.h);
     }
@@ -479,7 +501,7 @@ function update() {
       }
     });
 
-    // HUD: score and record and coins
+    // HUD: score and record and coins (use logical coords)
     ctx.font = "16px sans-serif"; ctx.textAlign = "left";
     ctx.fillStyle = "white";
     ctx.fillText("Score: " + score, 12, 22);
@@ -488,14 +510,14 @@ function update() {
 
     // pause icon (top-right)
     ctx.textAlign = "right";
-    ctx.fillText("⏸", canvas.width - 16, 30);
+    ctx.fillText("⏸", lw - 16, 30);
     return;
   }
 
   // GAME OVER
   if (state === GAME_OVER) {
-    center("GAME OVER", canvas.height*0.45, 40);
-    center("TAP TO MENU", canvas.height*0.55, 18);
+    center("GAME OVER",lh*0.45,40);
+    center("TAP TO MENU",lh*0.55,18);
     return;
   }
 }
@@ -539,8 +561,6 @@ window.__gameDebug = {
   addCoins: (n=1)=>{ coins+=n; localStorage.setItem("coins",coins); },
   setState: s => { state = s; }
 };
-
 </script>
 </body>
 </html>
-
